--- a/frontend/src/blocks/autorization/__link/autorization__link.css
+++ b/frontend/src/blocks/autorization/__link/autorization__link.css
@@ -7,8 +7,8 @@
     color: #fff;
     text-decoration: none;
     transition: opacity .6s linear;
-};
+}
 
 .autorization__link:hover {
     opacity: .6;
-};
+}
