--- a/frontend/src/blocks/header/__button/header__button.css
+++ b/frontend/src/blocks/header/__button/header__button.css
@@ -6,8 +6,8 @@
     background-color: transparent;
     transition: 0.3s;
     border: none;
-};
+}
 
 .header__button:hover {
     opacity: .6;
-};
+}
